fix loading toggle perf

--- a/AnimalHospital/質問事項.md
+++ b/AnimalHospital/質問事項.md
@@ -6,5 +6,10 @@
   - sectionタグはいつ使うのか
 - imgタグとbackground-imageの使い分けについて
   - imgは必須のとき、background-imageは装飾のとき、とあったが、現場ではどうか？
-- 
+- CSS Validator Serviceの検証結果にどこまで対応するか。
+  - 例えば以下のような場合、修正が必要なのか？
+  > 次のプロパティが正しくありません : background-image image-set(url("../images/about_02_sp.png") 1x,url("../images/about_02_sp@2x.png") 2x) は background-image で利用できる値ではありません : image-set(url("../images/about_02_sp.png") 1x,url("../images/about_02_sp@2x.png") 2x)
+
+-webkit-box is a vendor extension  
+
 
