fix wrapper, img-size, bg-position:top

--- a/AnimalHospital/指摘事項.md
+++ b/AnimalHospital/指摘事項.md
@@ -8,3 +8,10 @@
 上記修正が完了したら、再度こちらでご報告いただけますと幸いです:祈る:
 
 よろしくお願いいたします！
+
+2回目指摘
+- [x] ①画面幅を1600px付近より大きくすると、お知らせのテーブル部分の表示が崩れる
+→.wrapperのpaddingを%指定にしているのが原因のようです！
+- [x] ②SPサイズでaboutエリアとserviceエリアの画像サイズが違うのが気になるので、どちらかに合わせるとさらに良いと思います！
+- [x] ③画面幅768-839pxの時、ハンバーガーアイコンの位置がズレる
+- [ ] ④SPサイズのFV画像ですが、画面幅によって女性の顔が切れてしまい違和感があるので、**background-positionをtop**にするとどの画面サイズでも自然に見えると思います:ok_女性:
