--- a/RealEstate/確認事項.md
+++ b/RealEstate/確認事項.md
@@ -1,7 +1,7 @@
 - NEWS/ブログの高さは固定でしょうか。３行目が見切れる仕様でよろしいでしょうか。
   - よい。
 - 問い合わせフォーム
-  - 問い合わせ種別はひとつでよいでしょうか。以下のような種別でいかがでしょうか？
+  - 問い合わせ種別はひとつでよいでしょうか。以下のような種別を追加してよろしいでしょうか？
     - 家づくりについて
     - リフォームについて
     - 都市計画・開発について
