quality check done

--- a/RealEstate/確認事項.md
+++ b/RealEstate/確認事項.md
@@ -8,4 +8,24 @@
 - モーダル
   - PCレイアウトのみ実装でよいか
   - SPレイアウトの場合はボタンをクリックしても反応しない仕様でよいか
-- 
+
+コンソールエラーの対応について
+以下はGoogleMapを利用していることによるエラーと判断しました。
+
+google.maps.event.addDomListener() is deprecated, use the standard addEventListener() method instead: https://developer.mozilla.org/docs/Web/API/EventTarget/addEventListener
+The feature will continue to work and there is no plan to decommission it.
+_.F.addDomListener @ js?client=google-maps-embed&paint_origin=&libraries=geometry,search&v=3.exp&language=ja&region=jp&callback=onApiLoad:274
+ur @ init_embed.js:310
+vr @ init_embed.js:313
+xr @ init_embed.js:313
+ss @ init_embed.js:422
+b @ init_embed.js:427
+se @ init_embed.js:68
+a @ init_embed.js:66
+load（非同期）
+oe @ init_embed.js:65
+le @ init_embed.js:64
+（匿名） @ init_embed.js:428
+onEmbedLoad @ embed?pb=!1m18!1m12!1m3!1d3353.244602057616!2d129.8368533155074!3d32.81228338096132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356aad0ae40d2583%3A0xc715da862d399c4e!2z44CSODUyLTgwNjUg6ZW35bSO55yM6ZW35bSO5biC5qiq5bC-77yR5LiB55uu77yV4oiS77yT77yW!5e0!3m2!1sja!2sjp!4v1650590915516!5m2!1sja!2sjp:17
+（匿名） @ init_embed.js:428
+（匿名） @ init_embed.js:428
