add blog_detail and checkme

--- a/MusicSchool/確認事項.md
+++ b/MusicSchool/確認事項.md
@@ -7,3 +7,8 @@
   - SPサイズ：96文字
   - PCサイズ：144文字
 
+## notice_detail
+
+- SPサイズのパンくずリストについて要素単位で改行とするほうがレイアウトとして整っていると思いますがいかがでしょうか？
+- PCサイズのテキスト文字数がSPサイズと違いました。SPサイズの文字数に合わせております。また、PCサイズで確認すると文字数が足りませんが高さを指定して調整しています。
+- 
