--- a/MusicSchool/確認事項.md
+++ b/MusicSchool/確認事項.md
@@ -9,10 +9,13 @@
 
 ## notice_detail
 
-- SPサイズのパンくずリストについて要素単位で改行とするほうがレイアウトとして整っていると思いますがいかがでしょうか？
+- SPサイズのパンくずリストについて要素単位で改行としています。
 - PCサイズのテキスト文字数がSPサイズと違いました。SPサイズの文字数に合わせております。また、PCサイズで確認すると文字数が足りませんが高さを指定して調整しています。
 
 ## search
 
-- PCサイズでの検索結果1件目のテキストの文字数がSPサイズと一致しておりませんでした。SPサイズの文字数に合わせております。修正必要であればお手数をおかけしますがご指摘ください。
-- 
+- PCサイズでの検索結果1件目のテキストの文字数がSPサイズと一致しておりませんでした。SPサイズの文字数に合わせております。
+
+## result_details
+
+- SPサイズとPCサイズで関連記事のラベルが違いました。PCサイズのラベルを正としております。
